--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	
     <uses-sdk android:minSdkVersion="8" 
-        android:targetSdkVersion="8"
-        android:maxSdkVersion="19" />
+        android:targetSdkVersion="19" />
     
     <application android:icon="@drawable/icon" 
         android:label="@string/app_name"
