--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     android:windowSoftInputMode="adjustPan"
     package="org.ak2048.game" 
-    android:versionName="1.1" 
-    android:versionCode="2" 
+    android:versionName="1.2" 
+    android:versionCode="3" 
     android:hardwareAccelerated="true">
 
     <supports-screens
@@ -15,6 +15,7 @@
         android:anyDensity="true" />
     
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	
     <uses-sdk android:minSdkVersion="8" 
         android:targetSdkVersion="19" />
@@ -31,6 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 
 </manifest>
