--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     android:windowSoftInputMode="adjustPan"
     package="org.ak2048.game" 
-    android:versionName="1.3" 
-    android:versionCode="4" 
+    android:versionName="1.4" 
+    android:versionCode="5" 
     android:hardwareAccelerated="true">
 
     <supports-screens
@@ -13,6 +13,9 @@
         android:xlargeScreens="true"
         android:resizeable="true"
         android:anyDensity="true" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	
     <uses-sdk android:minSdkVersion="8" 
         android:targetSdkVersion="19" />
@@ -29,6 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 
 </manifest>
