--- a/platforms/android/AndroidManifest.xml
+++ b/platforms/android/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ak2048.game"
-    android:hardwareAccelerated="true"
-    android:versionCode="6"
-    android:versionName="1.5.0" >
+    android:hardwareAccelerated="true" >
 
     <supports-screens
         android:anyDensity="true"
@@ -14,14 +12,9 @@
         android:xlargeScreens="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    
-        <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
-        android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
