--- a/platforms/android/CordovaLib/build.gradle
+++ b/platforms/android/CordovaLib/build.gradle
@@ -17,23 +17,21 @@
        under the License.
 */
 
-
-
 buildscript {
     repositories {
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.+'
+        classpath 'com.android.tools.build:gradle:1.2.2'
     }
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    buildToolsVersion "19.1"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
