--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     getProjectList().each { subproject ->
         compile project(subproject)
     }
+    compile 'com.google.android.gms:play-services:7.0.0'
 }
 
 android {
@@ -36,7 +37,7 @@ android {
 
     defaultConfig {
         applicationId "org.ak2048.game"
-        minSdkVersion 7
+        minSdkVersion 9
         targetSdkVersion 19
         versionCode 7
         versionName "1.6.0"
